src/rules/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C402_C402.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryGeneratorDict: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 30
  fix:
    content: "{x: x for x in range(3)}"
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 30
  parent: ~
- kind:
    UnnecessaryGeneratorDict: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 4
    column: 1
  fix:
    content: "{\n    x: x for x in range(3)\n}"
    location:
      row: 2
      column: 0
    end_location:
      row: 4
      column: 1
  parent: ~

