src/rules/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C411_C411.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessaryListCall: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 20
  fix:
    content: "[i for i in x]"
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 20
  parent: ~

